[tool.poetry]
name = "app"
version = "0.1.0"
description = "Helpers for web development"
authors = ["Flavien Lambert"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiofiles = "^0.6.0"
pandas = "^1.2.3"
xlsxwriter = "^1.3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
